prusti/tests/verify/fail/with-spec/ensures-false.rs
extern crate prusti_contracts;

#[ensures="false"] //~ ERROR
fn main() {
}
